--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,13 @@
 {
   "name": "SquashTV Spoilers",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "manifest_version": 3,
-  "description": "Removes names and images from video titles.",
+  "description": "Removes names and images from video titles. Code available on github at https://github.com/Judgeja/SquashTV. Follow me on Twitter @TheJamhead ",
   "content_scripts": [
     {
       "matches": [
-        "https://psaworldtour.com/tv/tournament/*"
+        "https://psaworldtour.com/tv/tournament/*",
+        "https://psaworldtour.com/videos/view/*"
       ],
       "js": [
         "content_scripts/squashtv-nospoiler.js"
@@ -14,11 +15,21 @@
       "css": [
         "content_scripts/squashtv-nospoiler.css"
       ]
+    },
+    {
+      "matches": [
+        "https://geo.dailymotion.com/*"
+      ],
+      "css": [
+        "content_scripts/dailymotion.css"
+      ], 
+      "all_frames": true
     }
   ],
-  "host_permissions": [
- 
-  ],
+  "web_accessible_resources": [{
+    "resources": ["js/squashtv-nospoiler-video.js"],
+    "matches": ["<all_urls>"]
+  }],
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
